@@ -417,6 +417,10 @@ function set_config_option($config_name, $value, $remote = false) {
 
 	include_once($config['base_path'] . '/lib/poller.php');
 
+	if (strlen($config_name) > 75) {
+		cacti_log("ERROR: Config option name '$config_name' is too long, will be truncated", false, 'SYSTEM');
+	}
+
 	db_execute_prepared('REPLACE INTO settings
 		SET name = ?, value = ?',
 		array($config_name, $value));
