@@ -66,6 +66,7 @@ Cacti CHANGELOG
 -feature#5375: Add template for Fortinet firewall and Aruba Instant cluster
 -feature#5393: Add template for SNMP printer
 -feature#5418: Display device class before package import 
+-feature#5442: Table settings - extend column size, log error when variable name is truncated
 -feature: Update Cisco Device Template to include HSRP graph template
 -feature: Upgrade billboard.js to version 3.7.4
 -feature: Upgrade d3.js to version 7.8.2
